Fix arrow not showing for select on Firefox. Issue troxler/awesome-css-frameworks/#65

--- a/src/core.css
+++ b/src/core.css
@@ -243,14 +243,14 @@ input:not([size]):not([type="button" i]):not([type="submit" i]):not([type="reset
 }
 select:not([multiple]):not([size]) {
 	padding-right: 1.5rem;
-	background: var(--b-bg-2) url('data:image/svg+xml;utf8,<svg width="16" height="16" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="#2e3440"><path d="M5 6l5 5 5-5 2 1-7 7-7-7 2-1z"/></svg>') no-repeat right .5rem center;
+	background: var(--b-bg-2) url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg' fill='%232e3440'%3E%3Cpath d='M5 6l5 5 5-5 2 1-7 7-7-7 2-1z'/%3E%3C/svg%3E") no-repeat right .5rem center;
 	-moz-appearance: none;
 	-webkit-appearance: none;
 	appearance: none;
 }
 @media (prefers-color-scheme: dark) {
 	select:not([multiple]):not([size]) {
-		background-image: url('data:image/svg+xml;utf8,<svg width="16" height="16" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg" fill="#eceff4"><path d="M5 6l5 5 5-5 2 1-7 7-7-7 2-1z"/></svg>');
+		background-image: url("data:image/svg+xml,%3Csvg width='16' height='16' viewBox='0 0 20 20' xmlns='http://www.w3.org/2000/svg' fill='%23eceff4'%3E%3Cpath d='M5 6l5 5 5-5 2 1-7 7-7-7 2-1z'/%3E%3C/svg%3E");
 	}
 }
 textarea {
